# AI_NATIVE_BOOK

./: GITHUB_SETUP.md  QWEN.md  README.md  VERIFICATION.md  check_qdrant_methods.py  create_repo.sh  debug_cohere.py  requirements.txt  setup_git.sh  setup_github.sh  test_backend.py  test_env.py  test_full_flow.py  test_openrouter.py  test_rag_functionality.py  test_search.py
backend/: .gitignore  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_backend.py
backend/.specify/memory/: constitution.md
backend/api/: chat.py
backend/config/: settings.py
backend/history/prompts/002-embed-rag-chatbot/: 001-spec-embed-rag-chatbot.spec.prompt.md  002-plan-embed-rag-chatbot.plan.prompt.md  003-tasks-embed-rag-chatbot.tasks.prompt.md  004-impl-embed-rag-chatbot.green.prompt.md  005-impl-embed-rag-chatbot.green.prompt.md
backend/models/: chat.py
backend/services/: rag_service.py
backend/specs/001-embed-rag-chatbot/: spec.md
backend/specs/002-embed-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
backend/src/: main.py
backend/src/api/: __init__.py  dependencies.py  exceptions.py
backend/src/core/: config.py  constants.py  database.py  llm_client.py  logging.py  security.py  vector_store.py
backend/src/models/: __init__.py  book_section.py  conversation_session.py  text_segment.py
backend/src/services/: chunking_service.py  embedding_service.py  generation_service.py  retrieval_service.py  validation_service.py
backend/tests/unit/: test_validation.py
backend/utils/: logger.py
(+64 files in other folders)
